# kanoko

./: .gitignore  Cargo.toml  README.md
examples/: README.md  gradation.rs  gruvbox.rs  kanoko.rs  nazar.rs  placemat.rs  sunflower.rs
src/: canvas.rs  color.rs  lib.rs  main.rs  utils.rs
src/geometry/: angle.rs  bounding_box.rs  coordinate.rs  mod.rs
src/grid/: diamond.rs  mod.rs
src/kanoko/: mod.rs
src/patterns/: kanoko.rs  mod.rs
src/point_set/: lattice.rs  mod.rs  poisson_disk.rs  vogel.rs
src/shape/: kanoko.rs  mod.rs  polygon.rs
