[package]
name = "kanoko"
version = "0.3.0"
edition = "2024"
description = "Generate a random pattern inspired by the traditional Japanese kanoko pattern"
documentation = "https://docs.rs/kanoko/"
readme = "README.md"
repository = "https://github.com/thekakkun/kanoko"
license-file = "LICENSE"

[dependencies]
hex_color = "3.0.0"
itertools = "0.14.0"
rand = "0.9.2"
rand_distr = "0.5.1"
svg = "0.18.0"

