[package]
name = "kanoko"
version = "0.3.1"
edition = "2024"
description = "A library for generative art (initially) based off of a traditional Japanese tie-dye pattern"
documentation = "https://docs.rs/kanoko/"
readme = "README.md"
repository = "https://github.com/thekakkun/kanoko"
license-file = "LICENSE"

[dependencies]
hex_color = "3.0.0"
itertools = "0.14.0"
rand = "0.9.2"
rand_distr = "0.5.1"
svg = "0.18.0"
