[package]
name = "kanoko"
version = "0.6.1"
edition = "2024"
description = "A library for generative art (initially) based off of a traditional Japanese tie-dye pattern"
documentation = "https://docs.rs/kanoko/"
readme = "README.md"
repository = "https://github.com/thekakkun/kanoko"
license-file = "LICENSE"

[dependencies]
bon = "3.8.1"
hex_color = "3.0.0"
itertools = "0.14.0"
rand = "0.10.0"
rand_distr = { version = "0.6.0", features = ["alloc"] }
svg = "0.18.0"
